Bug 277146 - Playlist sorting menu is sorted alphabetically by their English name
Summary: Playlist sorting menu is sorted alphabetically by their English name
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: 2.8.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: later
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-05 15:16 UTC by Kai Uwe Broulik
Modified: 2024-06-23 22:05 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-07-05 15:16:04 UTC
Version:           2.4.1 (using KDE 4.6.4) 
OS:                Linux

Clicking that arrow next to te playlist icon the menu is sorted alphabetically by their English names instead of the localized name which makes “Zufällig“ appear next to “Bewertung“ (Random and Rating). 

[I don’t know though if this is solvable at all]

Reproducible: Always

Steps to Reproduce:
.


Expected Results:  
.
Comment 1 Aakash 2011-12-31 12:52:22 UTC
I guess if a localization expert or a developer's response to this would be more beneficial.
Comment 2 Mayank Madan 2012-11-30 08:57:45 UTC
Reproducible in 2.6-git
Comment 3 Myriam Schweingruber 2012-11-30 10:18:49 UTC
Setting status to confirmed.
Comment 4 Mikhail Ivchenko 2013-12-01 14:18:10 UTC
Confirmed in Amarok v2.8.0.
Comment 5 Tuomas Nurmi 2024-06-23 22:05:19 UTC
Git commit 06a2d20fa6547512e99c66023cbe30163fcc73eb by Tuomas Nurmi.
Committed on 23/06/2024 at 21:59.
Pushed by nurmi into branch 'master'.

Sort playlist sorting breadcrumb menu by localized names

Internally, they are ordered alphabetically by English name, but no reason not to
do localized sorting when preparing the breadcrumb menu.

M  +1    -0    ChangeLog
M  +5    -0    src/playlist/PlaylistBreadcrumbItem.cpp

https://invent.kde.org/multimedia/amarok/-/commit/06a2d20fa6547512e99c66023cbe30163fcc73eb