Sort playlist sorting breadcrumb menu by localized names

Internally, they are ordered alphabetically by English name, but no reason not to
do localized sorting when preparing the breadcrumb menu.

BUG: 277146